feat: Add new section about my skills

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
         </nav>
         <div class="language">
-            <button class= "active" id="portuguese">PT</button>
+            <button class="active" id="portuguese">PT</button>
             <button id="english">EN</button>
         </div>
      </header>
@@ -61,17 +61,84 @@
                     </a>
                 </span>
             </div>
-            <div class="col-6 d-none d-md-block img-home"></div>
+            <div class="col-6 d-none d-md-block img-home">
+                <img src="img/Asset_3_webdevelopment.svg" alt="An image of a man programming on a computer">
+            </div>
         </div>
      </main>
      <section id="about" class="main-element container-fluid bg-light-purple">
         <div class="row">
             <div class="col-6 m-auto d-xs-none white-background">
-                <img src="img/undraw_programming_re_kg9v.svg" alt="A man programming" class="img-fluid">
+                <img src="img/undraw_programming_re_kg9v.svg" alt="An image of a man programming" class="img-fluid">
             </div>
             <div class="about-me-text col-md-6">
                 <h2 class="title-about-me">About Me</h2>
                 <p class="paragraph-about-me">lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus qui fugit temporibus corporis perferendis natus ab dicta tenetur harum aspernatur, enim eveniet doloremque quasi modi dolorum consequatur similique! Temporibus, deserunt.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui placeat culpa optio officiis veniam ducimus velit dolore nesciunt, eum ab, vitae praesentium? Incidunt labore soluta quis error molestiae in quod.</p>
+            </div>
+        </div>
+    </section>
+    <section class="main-element bg-dark-purple" id="myskills">
+        <h1 class="text-uppercase text-center">My Skills</h1>
+        <div class="row gy-4">
+            <div class="col-4 col-md-3" id="vue">
+                <div class="skill-case">
+                    <span class="tooltip-title color-light-purple">Vue.js</span>
+                    <img src="img/vue-16-svgrepo-com.svg" alt="vue's icon">
+                </div>
+            </div>
+            <div class="col-4 col-md-3" id="jquery">
+                <div class="skill-case">
+                    <span class="tooltip-title color-light-purple">jQuery</span>
+                    <img src="img/jquery-svgrepo-com (1).svg" alt="jQuery's icon">
+                </div>
+            </div>
+            <div class="col-4 col-md-3" id="javascript">
+                <div class="skill-case">
+                    <span class="tooltip-title color-light-purple">JavaScript</span>
+                    <img src="img/javascript-155-svgrepo-com.svg" alt="javascript's icon">
+                </div>
+            </div>
+            <div class="col-4 col-md-3" id="python">
+                <div class="skill-case">
+                    <span class="tooltip-title color-light-purple">Python</span>
+                    <img src="img/python-127-svgrepo-com (1).svg" alt="python's icon">
+                </div>
+            </div>
+            <div class="col-4 col-md-3" id="bootstrap">
+                <div class="skill-case">
+                    <span class="tooltip-title color-light-purple">Bootstrap</span>
+                    <img src="img/bootstrap-svgrepo-com (2).svg" alt="bootstrap's icon">
+                </div>
+            </div>
+            <div class="col-4 col-md-3" id="html">
+                <div class="skill-case">
+                    <span class="tooltip-title color-light-purple">HTML</span>
+                    <img src="img/html-124-svgrepo-com.svg" alt="HTML's icon">
+                </div>
+            </div>
+            <div class="col-4 col-md-3" id="css">
+                <div class="skill-case">
+                    <span class="tooltip-title color-light-purple">CSS</span>
+                    <img src="img/css3-svgrepo-com.svg" alt="CSS's icon">
+                </div>
+            </div>
+            <div class="col-4 col-md-3" id="figma">
+                <div class="skill-case">
+                    <span class="tooltip-title color-light-purple">Figma</span>
+                    <img src="img/figma-svgrepo-com (1).svg" alt="figma's icon">
+                </div>
+            </div>
+            <div class="col-4 col-md-3" id="git">
+                <div class="skill-case">
+                    <span class="tooltip-title color-light-purple">Git</span>
+                    <img src="img/git-svgrepo-com (1).svg" alt="git's icon">
+                </div>
+            </div>
+            <div class="col-4 col-md-3" id="github">
+                <div class="skill-case">
+                    <span class="tooltip-title color-light-purple">Github</span>
+                    <img src="img/github-142-svgrepo-com.svg" alt="github's icon">
+                </div>
             </div>
         </div>
     </section>
