--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <!-- background -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js" defer></script>
     <!-- personal links -->
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
@@ -44,6 +46,7 @@
         </div>
      </header>
      <main id="home" class="main-element container-fluid bg-dark-purple d-flex align-items-center justify-content-md-center">
+        <canvas class="animated-bg"></canvas>
         <div class="row">
             <div class="first-content-main col-md-6">
                 <div class="text-content-main p-2">
@@ -78,6 +81,7 @@
         </div>
     </section>
     <section class="main-element bg-dark-purple" id="myskills">
+        <canvas class="animated-bg-2"></canvas>
         <h1 class="text-uppercase text-center">My Skills</h1>
         <div class="row gy-4">
             <div class="col-4 col-md-3" id="vue">
