--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!-- background -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js" defer></script>
+    <!-- carousel -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" defer></script>
     <!-- personal links -->
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
@@ -143,6 +146,29 @@
                     <span class="tooltip-title color-light-purple">Github</span>
                     <img src="img/github-142-svgrepo-com.svg" alt="github's icon">
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid bg-light-purple" id="project">
+        <h1 class="text-uppercase text-center">My projects</h1>
+        <div class="row m-auto">
+            <div class="col-12 col-md-6 carousel-container m-auto">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <img src="img/Macbook_Air_Mockup_1_no-bg_macbook-1200.png" alt="#" class="swiper-slide img-fluid">
+                        <img src="img/Macbook_Air_Mockup_1_no-bg_macbook-1200.png" alt="#" class="swiper-slide img-fluid">
+                        <img src="img/Macbook_Air_Mockup_1_no-bg_macbook-1200.png" alt="#" class="swiper-slide img-fluid">
+                    </div>
+                    <div class="swiper-pagination"></div>
+                    <i class="swiper-button-prev bi bi-chevron-left"></i>
+                    <i class="swiper-button-next bi bi-chevron-right"></i>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 text-light carousel-text-block">
+                <h2 class="site-title"></h2>
+                <p class="site-description"></p>
+                <a href="#" class="site-link"><span class="link-visit-site">Visit Site</span></a>
             </div>
         </div>
     </section>
