--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid bg-light-purple" id="project">
+    <section class="container-fluid bg-light-purple main-element" id="project">
         <h1 class="text-uppercase text-center">My projects</h1>
         <div class="row m-auto">
             <div class="col-12 col-md-6 carousel-container m-auto">
