Feat: Added a title to each page's button

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                     <span class="career">front-end developer</span>
                 </div>
                 <span class="buttons">
-                    <button class="download-cv-btn" id="download-cv">Download CV</button>
+                    <button class="download-cv-btn" id="download-cv" title="Click to download curriculum">Download CV</button>
                     <a href="https://www.linkedin.com/in/jhefferson-muzy-039389247/" target="_blank">
-                        <button class="linkedin-btn" id="linkedin">
+                        <button class="linkedin-btn" id="linkedin" title="Click to visit my profile on linkedIn">
                             <img src="img/Layer 2.svg">
                             <span class="linkedin-brand">LinkedIn</span>
                         </button>
@@ -168,7 +168,7 @@
             <div class="col-12 col-md-6 text-light carousel-text-block">
                 <h2 class="site-title"></h2>
                 <p class="site-description"></p>
-                <a href="#" class="site-link"><span class="link-visit-site">Visit Site</span></a>
+                <a href="#" class="site-link"><span class="link-visit-site" title="Click to visit carousel's website">Visit Site</span></a>
             </div>
         </div>
     </section>
