Add: Added new projects section with my contacts information.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <span class="buttons">
                     <button class="download-cv-btn" id="download-cv" title="Click to download curriculum">Download CV</button>
                     <a href="https://www.linkedin.com/in/jhefferson-muzy-039389247/" target="_blank">
-                        <button class="linkedin-btn" id="linkedin" title="Click to visit my profile on linkedIn">
+                        <button class="linkedin-btn" id="linkedin-home" title="Click to visit profile on linkedIn">
                             <img src="img/Layer 2.svg">
                             <span class="linkedin-brand">LinkedIn</span>
                         </button>
@@ -152,7 +152,7 @@
     <section class="container-fluid bg-light-purple main-element" id="project">
         <h1 class="text-uppercase text-center">My projects</h1>
         <div class="row m-auto">
-            <div class="col-12 col-md-6 carousel-container m-auto">
+            <div class="col-md-6 carousel-container m-auto">
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <!-- Slides -->
@@ -165,10 +165,36 @@
                     <i class="swiper-button-next bi bi-chevron-right"></i>
                 </div>
             </div>
-            <div class="col-12 col-md-6 text-light carousel-text-block">
+            <div class="col-md-6 text-light carousel-text-block">
                 <h2 class="site-title"></h2>
                 <p class="site-description"></p>
                 <a href="#" class="site-link"><span class="link-visit-site" title="Click to visit carousel's website">Visit Site</span></a>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid bg-dark-purple main-element" id="contact">
+        <div class="row">
+            <div class="contact-section-img col-6 m-auto d-xs-none white-background">
+                <img src="img/profile-pictures (1).svg" alt="A man beside a large phone with his social media's profile open" class="img-fluid">
+            </div>
+            <div class="contact-text col-md-6 order-md-first">
+                <h2>Get in Touch</h2>
+                <p class="paragraph-contact">If you are interested in hiring me for a project or to work on your company, feel free to use the buttons below to connect with me on social media. Click once on the button to be redirected to my social media page, twice to copy my name or phone number.</p>
+                <span class="contact-link-buttons m-auto">
+                    <button class="btn btn-social-media social-media-linkedin" title="Click once to visit profile, twice to copy name." id="linkedin">
+                        <img src="img/Layer 2.svg">
+                        <span>LinkedIn</span>
+                    </button>
+                    <button class="btn btn-social-media social-media-github" title="Click once to visit profile, twice to copy name." id="github">
+                        <div class="white-board-github"></div>
+                        <img src="img/github-142-svgrepo-com.svg" class="img-github">
+                        <span >Github</span>
+                    </button>
+                    <button class="btn btn-social-media social-media-whatsapp" title="Click once to send a message, twice to copy number." id="whatsapp">  
+                        <img src="img/whatsapp-svgrepo-com.svg">
+                        <span>Whatsapp</span>
+                    </button>
+                </span>
             </div>
         </div>
     </section>
