Refactor: Removed redundant ids from skill section's elements

--- a/index.html
+++ b/index.html
@@ -87,61 +87,61 @@
         <canvas class="animated-bg-2"></canvas>
         <h1 class="text-uppercase text-center">My Skills</h1>
         <div class="row gy-4">
-            <div class="col-4 col-md-3" id="vue">
+            <div class="col-4 col-md-3">
                 <div class="skill-case">
                     <span class="tooltip-title color-light-purple">Vue.js</span>
                     <img src="img/vue-16-svgrepo-com.svg" alt="vue's icon">
                 </div>
             </div>
-            <div class="col-4 col-md-3" id="jquery">
+            <div class="col-4 col-md-3">
                 <div class="skill-case">
                     <span class="tooltip-title color-light-purple">jQuery</span>
                     <img src="img/jquery-svgrepo-com (1).svg" alt="jQuery's icon">
                 </div>
             </div>
-            <div class="col-4 col-md-3" id="javascript">
+            <div class="col-4 col-md-3">
                 <div class="skill-case">
                     <span class="tooltip-title color-light-purple">JavaScript</span>
                     <img src="img/javascript-155-svgrepo-com.svg" alt="javascript's icon">
                 </div>
             </div>
-            <div class="col-4 col-md-3" id="python">
+            <div class="col-4 col-md-3">
                 <div class="skill-case">
                     <span class="tooltip-title color-light-purple">Python</span>
                     <img src="img/python-127-svgrepo-com (1).svg" alt="python's icon">
                 </div>
             </div>
-            <div class="col-4 col-md-3" id="bootstrap">
+            <div class="col-4 col-md-3">
                 <div class="skill-case">
                     <span class="tooltip-title color-light-purple">Bootstrap</span>
                     <img src="img/bootstrap-svgrepo-com (2).svg" alt="bootstrap's icon">
                 </div>
             </div>
-            <div class="col-4 col-md-3" id="html">
+            <div class="col-4 col-md-3">
                 <div class="skill-case">
                     <span class="tooltip-title color-light-purple">HTML</span>
                     <img src="img/html-124-svgrepo-com.svg" alt="HTML's icon">
                 </div>
             </div>
-            <div class="col-4 col-md-3" id="css">
+            <div class="col-4 col-md-3">
                 <div class="skill-case">
                     <span class="tooltip-title color-light-purple">CSS</span>
                     <img src="img/css3-svgrepo-com.svg" alt="CSS's icon">
                 </div>
             </div>
-            <div class="col-4 col-md-3" id="figma">
+            <div class="col-4 col-md-3">
                 <div class="skill-case">
                     <span class="tooltip-title color-light-purple">Figma</span>
                     <img src="img/figma-svgrepo-com (1).svg" alt="figma's icon">
                 </div>
             </div>
-            <div class="col-4 col-md-3" id="git">
+            <div class="col-4 col-md-3">
                 <div class="skill-case">
                     <span class="tooltip-title color-light-purple">Git</span>
                     <img src="img/git-svgrepo-com (1).svg" alt="git's icon">
                 </div>
             </div>
-            <div class="col-4 col-md-3" id="github">
+            <div class="col-4 col-md-3">
                 <div class="skill-case">
                     <span class="tooltip-title color-light-purple">Github</span>
                     <img src="img/github-142-svgrepo-com.svg" alt="github's icon">
