--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
     </section>
     <section class="container-fluid bg-light-purple main-element" id="project">
-        <h1 class="text-uppercase text-center">My projects</h1>
+        <h1 class="text-uppercase text-center">projects</h1>
         <div class="row m-auto">
             <div class="col-md-6 carousel-container m-auto">
                 <div class="swiper">
