Feat: Add a new button on projects' section to visit github repository

--- a/index.html
+++ b/index.html
@@ -169,7 +169,14 @@
             <div class="col-md-6 text-light carousel-text-block">
                 <h2 class="site-title"></h2>
                 <p class="site-description"></p>
-                <a href="#" class="site-link"><span class="link-visit-site" title="Click to visit carousel's website">Visit Site</span></a>
+                <div class="d-flex justify-content-center gap-3 gap-md-5 project-buttons">
+                    <a href="#" target="_blank" class="site-link" title="Open website">
+                        <span class="visit-link">View live</span>
+                    </a>
+                    <a href="#" target="_blank" class="github-link" title="Open github repository">
+                        <span class="visit-link">Github Repo</span>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
