--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
             </div>
             <div class="about-me-text col-md-6">
                 <h2 class="title-about-me">About Me</h2>
-                <p class="paragraph-about-me">lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus qui fugit temporibus corporis perferendis natus ab dicta tenetur harum aspernatur, enim eveniet doloremque quasi modi dolorum consequatur similique! Temporibus, deserunt.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui placeat culpa optio officiis veniam ducimus velit dolore nesciunt, eum ab, vitae praesentium? Incidunt labore soluta quis error molestiae in quod.</p>
+                <div class="paragraph-div">
+                    <p class="paragraph-about-me">Hello, World! My name is Jhefferson Muzy, and I'm a programming enthusiast. My journey in this field began a few years ago when I watched some videos related to the topic. Unfortunately, at that time, I didn't have access to a computer to start my studies. However, I didn't let that stop me, and I decided to start learning even without the proper equipment. Using a notepad and watching programming-related videos, I took my first steps in this area. <span class="show-about-me-text">See More</span></p>
+                    <p class="paragraph-about-me hidden-about-me-text">My journey started with the language Portugol, used for educational purposes, where I learned basic concepts such as syntax, variables, data types, conditionals, and other fundamentals. Shortly after, I began my study in Python, where I had an easy time due to my existing English skills.</p>
+                    <p class="paragraph-about-me hidden-about-me-text">After dedicating about five months to studying Python, I decided to venture into front-end web development and started learning its core technologies: HTML, CSS, and JavaScript. This new journey got me even more excited about programming.</p>
+                    <p class="paragraph-about-me hidden-about-me-text">Currently, I'm determined to expand my knowledge in front-end web development, exploring new technologies, and honing my skills in various tools. <span class="hide-about-me-text">See  less</span></p>
+                </div>
             </div>
         </div>
     </section>
