Update: Update carousel with original content and mockups.

--- a/index.html
+++ b/index.html
@@ -248,9 +248,10 @@
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <!-- Slides -->
-                        <img src="img/Macbook_Air_Mockup_1_no-bg_macbook-1200.png" alt="#" class="swiper-slide img-fluid">
-                        <img src="img/Macbook_Air_Mockup_1_no-bg_macbook-1200.png" alt="#" class="swiper-slide img-fluid">
-                        <img src="img/Macbook_Air_Mockup_1_no-bg_macbook-1200.png" alt="#" class="swiper-slide img-fluid">
+                        <img src="img/Macbook_watch_shop.png" alt="#" class="swiper-slide img-fluid">
+                        <img src="img/Macbook_odyssey.png" alt="#" class="swiper-slide img-fluid">
+                        <img src="img/Macbook_web_store.png" alt="#" class="swiper-slide img-fluid">
+                        <img src="img/Macbook_to-do_list.png" alt="#" class="swiper-slide img-fluid">
                     </div>
                     <div class="swiper-pagination"></div>
                     <i class="swiper-button-prev bi bi-chevron-left"></i>
