Feat: add functionality to 'download CV' button.

--- a/index-pt.html
+++ b/index-pt.html
@@ -75,7 +75,7 @@
                     <span class="career">desenvolvedor front-end</span>
                 </div>
                 <span class="buttons">
-                    <button class="download-cv-btn" id="download-cv" title="Clique para baixar curriculo">Baixar CV</button>
+                    <a href="img/curriculum/curriculo-portugues-gh.pdf" download="Jhefferson-curriculo.pdf"><button class="download-cv-btn" id="download-cv" title="Clique para baixar curriculo">Baixar CV</button></a>
                     <a href="https://www.linkedin.com/in/jhefferson-muzy-039389247/" target="_blank">
                         <button class="linkedin-btn" id="linkedin-home" title="Clique para visitar linkedin">
                             <img src="img/Layer 2.svg">
