--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <span class="career">front-end developer</span>
                 </div>
                 <span class="buttons">
-                    <button class="download-cv-btn" id="download-cv" title="Click to download curriculum">Download CV</button>
+                    <a href="img/curriculum/curriculum-english-gh.pdf" download="Jhefferson-curriculum.pdf"><button class="download-cv-btn" id="download-cv" title="Click to download curriculum">Download CV</button></a>
                     <a href="https://www.linkedin.com/in/jhefferson-muzy-039389247/" target="_blank">
                         <button class="linkedin-btn" id="linkedin-home" title="Click to visit profile on linkedIn">
                             <img src="img/Layer 2.svg">
