Chore: Update image decriptions and add titles to elements

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
      <header>
         <div class="brand">Muzy's</div>
-        <div class="hamburger-icon d-md-none">
+        <div class="hamburger-icon d-md-none" title="Click to open or close the menu">
             <input type="checkbox" id="hamburger-icon-control">
             <div class="slash"></div>
         </div>
@@ -61,7 +61,7 @@
                 </ul>
             </nav>
             <div class="language d-md-flex">
-                <a href="index-pt.html"><button id="portuguese">PT</button></a>
+                <a href="index-pt.html" title="Change page's language to Portuguese"><button id="portuguese">PT</button></a>
                 <a href="index.html"><button class="active" id="english">EN</button></a>
             </div>
         </div>
@@ -75,9 +75,9 @@
                     <span class="career">front-end developer</span>
                 </div>
                 <span class="buttons">
-                    <a href="img/curriculum/curriculum-english-gh.pdf" download="Jhefferson-curriculum.pdf"><button class="download-cv-btn" id="download-cv" title="Click to download curriculum">Download CV</button></a>
+                    <a href="img/curriculum/curriculum-english-gh.pdf" download="curriculum.pdf"><button class="download-cv-btn" id="download-cv" title="Download curriculum">Download CV</button></a>
                     <a href="https://www.linkedin.com/in/jhefferson-muzy-039389247/" target="_blank">
-                        <button class="linkedin-btn" id="linkedin-home" title="Click to visit profile on linkedIn">
+                        <button class="linkedin-btn" id="linkedin-home" title="Open LinkedIn">
                             <img src="img/Layer 2.svg">
                             <span class="linkedin-brand">Linkedin</span>
                         </button>
@@ -97,10 +97,10 @@
             <div class="about-me-text col-md-6">
                 <h2 class="title-about-me">About Me</h2>
                 <div class="paragraph-div">
-                    <p class="paragraph-about-me">Hello, World! My name is Jhefferson Muzy, and I'm a programming enthusiast. My journey in this field began a time ago when I watched some videos related to the topic, and I got quite interested in the area. Unfortunately, at that time, I didn't have access to a computer to start my studies. However, I didn't let that stop me, and I decided to start learning even without the proper equipment. Using a notepad and watching programming-related videos, I took my first steps in this area. <span class="show-about-me-text">See More</span></p>
+                    <p class="paragraph-about-me">Hello, World! My name is Jhefferson Muzy, and I'm a programming enthusiast. My journey in this field began a time ago when I watched some videos related to the topic, and I got quite interested in the area. Unfortunately, at that time, I didn't have access to a computer to start my studies. However, I didn't let that stop me, and I decided to start learning even without the proper equipment. Using a notepad and watching programming-related videos, I took my first steps in this area. <span class="show-about-me-text" title="Show full text">See More</span></p>
                     <p class="paragraph-about-me hidden-about-me-text">My journey started with the language Portugol, used for educational purposes, where I learned basic concepts such as syntax, variables, data types, conditionals, and other fundamentals. Shortly after, I began my study in Python, where I had an easy time due to my existing English skills.</p>
                     <p class="paragraph-about-me hidden-about-me-text">After dedicating about five months to studying Python, I decided to venture into front-end web development and started learning its core technologies: HTML, CSS, and JavaScript. This new journey got me even more excited about programming.</p>
-                    <p class="paragraph-about-me hidden-about-me-text">Currently, I'm determined to expand my knowledge in front-end web development, exploring new technologies, and honing my skills in various tools. <span class="hide-about-me-text">See  less</span></p>
+                    <p class="paragraph-about-me hidden-about-me-text">Currently, I'm determined to expand my knowledge in front-end web development, exploring new technologies, and honing my skills in various tools. <span class="hide-about-me-text" title="Decrease text size">See  less</span></p>
                 </div>
             </div>
         </div>
@@ -270,8 +270,8 @@
                         <img src="img/Macbook_to-do_list.png" alt="MacBook's mockup that shows the to-do list" class="swiper-slide img-fluid">
                     </div>
                     <div class="swiper-pagination"></div>
-                    <i class="swiper-button-prev bi bi-chevron-left"></i>
-                    <i class="swiper-button-next bi bi-chevron-right"></i>
+                    <i class="swiper-button-prev bi bi-chevron-left" title="Previous"></i>
+                    <i class="swiper-button-next bi bi-chevron-right" title="Next"></i>
                 </div>
             </div>
             <div class="col-md-6 text-light carousel-text-block">
@@ -297,16 +297,16 @@
                 <h2>Get in Touch</h2>
                 <p class="paragraph-contact">If you are interested in hiring me for a project or to work on your company, feel free to use the buttons below to connect with me on social media. Click once on the button to be redirected to my social media page, twice to copy my name or phone number.</p>
                 <span class="contact-link-buttons m-auto">
-                    <button class="btn btn-social-media social-media-linkedin" title="Click once to visit profile, twice to copy name." id="linkedin">
+                    <button class="btn btn-social-media social-media-linkedin" title="Click once to open Linkedin, twice to copy name" id="linkedin">
                         <img src="img/Layer 2.svg">
                         <span>Linkedin</span>
                     </button>
-                    <button class="btn btn-social-media social-media-github" title="Click once to visit profile, twice to copy name." id="github">
+                    <button class="btn btn-social-media social-media-github" title="Click once to open Github, twice to copy name" id="github">
                         <div class="white-board-github"></div>
                         <img src="img/github-142-svgrepo-com.svg" class="img-github">
                         <span >Github</span>
                     </button>
-                    <button class="btn btn-social-media social-media-whatsapp" title="Click once to send a message, twice to copy number." id="whatsapp">  
+                    <button class="btn btn-social-media social-media-whatsapp" title="Click once to open Whatsapp, twice to copy number" id="whatsapp">  
                         <img src="img/whatsapp-svgrepo-com.svg">
                         <span>Whatsapp</span>
                     </button>
