--- a/index-pt.html
+++ b/index-pt.html
@@ -36,7 +36,7 @@
 <body>
      <header>
         <div class="brand">Muzy's</div>
-        <div class="hamburger-icon d-md-none">
+        <div class="hamburger-icon d-md-none" title="Clique para abrir ou fechar o menu">
             <input type="checkbox" id="hamburger-icon-control">
             <div class="slash"></div>
         </div>
@@ -62,7 +62,7 @@
             </nav>
             <div class="language d-md-flex">
                 <a href="index-pt.html"><button class="active" id="portuguese">PT</button></a>
-                <a href="index.html"><button id="english">EN</button></a>
+                <a href="index.html" title="Trocar idioma da página para Inglês"><button id="english">EN</button></a>
             </div>
         </div>
      </header>
@@ -75,9 +75,9 @@
                     <span class="career">desenvolvedor front-end</span>
                 </div>
                 <span class="buttons">
-                    <a href="img/curriculum/curriculo-portugues-gh.pdf" download="Jhefferson-curriculo.pdf"><button class="download-cv-btn" id="download-cv" title="Clique para baixar curriculo">Baixar CV</button></a>
+                    <a href="img/curriculum/curriculo-portugues-gh.pdf" download="curriculo.pdf"><button class="download-cv-btn" id="download-cv" title="Baixar currículo">Baixar CV</button></a>
                     <a href="https://www.linkedin.com/in/jhefferson-muzy-039389247/" target="_blank">
-                        <button class="linkedin-btn" id="linkedin-home" title="Clique para visitar linkedin">
+                        <button class="linkedin-btn" id="linkedin-home" title="Abrir linkedin">
                             <img src="img/Layer 2.svg">
                             <span class="linkedin-brand">Linkedin</span>
                         </button>
@@ -97,10 +97,10 @@
             <div class="about-me-text col-md-6">
                 <h2 class="title-about-me">Sobre mim</h2>
                 <div class="paragraph-div">
-                    <p class="paragraph-about-me">Olá, Mundo! Meu nome é Jhefferson Muzy, e sou um entusiasta da programação. Minha jornada nesse campo começou há algum tempo, quando assisti a alguns vídeos relacionados ao tema e fiquei bastante interessado na área. Infelizmente, naquela época, eu não tinha acesso a um computador para começar meus estudos. No entanto, não deixei isso me impedir e decidi começar a aprender mesmo sem o equipamento adequado. Utilizando um caderno e assistindo a vídeos relacionados à programação, dei meus primeiros passos nessa área. <span class="show-about-me-text">Ver mais</span></p>
+                    <p class="paragraph-about-me">Olá, Mundo! Meu nome é Jhefferson Muzy, e sou um entusiasta da programação. Minha jornada nesse campo começou há algum tempo, quando assisti a alguns vídeos relacionados ao tema e fiquei bastante interessado na área. Infelizmente, naquela época, eu não tinha acesso a um computador para começar meus estudos. No entanto, não deixei isso me impedir e decidi começar a aprender mesmo sem o equipamento adequado. Utilizando um caderno e assistindo a vídeos relacionados à programação, dei meus primeiros passos nessa área. <span class="show-about-me-text" title="Mostrar texto completo">Ver mais</span></p>
                     <p class="paragraph-about-me hidden-about-me-text">Minha jornada começou com a linguagem Portugol, utilizada para fins educacionais, onde aprendi conceitos básicos como sintaxe, variáveis, tipos de dados, condicionais e outros fundamentos. Pouco depois, iniciei meus estudos em Python, onde tive facilidade devido ao meu conhecimento prévio da língua inglesa.</p>
                     <p class="paragraph-about-me hidden-about-me-text">Após dedicar cerca de cinco meses ao estudo de Python, decidi me aventurar no desenvolvimento web front-end e comecei a aprender suas tecnologias principais: HTML, CSS e JavaScript. Essa nova jornada me deixou ainda mais empolgado com programação.</p>
-                    <p class="paragraph-about-me hidden-about-me-text">Atualmente, estou determinado a expandir meu conhecimento no desenvolvimento web front-end, explorando novas tecnologias e aprimorando minhas habilidades em diversas ferramentas. <span class="hide-about-me-text">Ver menos</span></p>
+                    <p class="paragraph-about-me hidden-about-me-text">Atualmente, estou determinado a expandir meu conhecimento no desenvolvimento web front-end, explorando novas tecnologias e aprimorando minhas habilidades em diversas ferramentas. <span class="hide-about-me-text" title="Diminuir tamanho do texto">Ver menos</span></p>
                 </div>
             </div>
         </div>
@@ -270,18 +270,18 @@
                         <img src="img/Macbook_to-do_list.png" alt="Mockup de um MacBook que mostra o site da lista de tarefas." class="swiper-slide img-fluid">
                     </div>
                     <div class="swiper-pagination"></div>
-                    <i class="swiper-button-prev bi bi-chevron-left"></i>
-                    <i class="swiper-button-next bi bi-chevron-right"></i>
+                    <i class="swiper-button-prev bi bi-chevron-left" title="Anterior"></i>
+                    <i class="swiper-button-next bi bi-chevron-right" title="Próximo"></i>
                 </div>
             </div>
             <div class="col-md-6 text-light carousel-text-block">
                 <h2 class="site-title"></h2>
                 <p class="site-description"></p>
                 <div class="d-flex justify-content-center gap-3 gap-md-5 project-buttons">
-                    <a href="#" target="_blank" class="site-link" title="Open website">
+                    <a href="#" target="_blank" class="site-link" title="Abrir site">
                         <span class="visit-link">Visitar Site</span>
                     </a>
-                    <a href="#" target="_blank" class="github-link" title="Open github repository">
+                    <a href="#" target="_blank" class="github-link" title="Abrir repositório no Github">
                         <span class="visit-link">Github Repo</span>
                     </a>
                 </div>
@@ -291,22 +291,22 @@
     <section class="container-fluid bg-dark-purple main-element" id="contact">
         <div class="row">
             <div class="contact-section-img col-6 m-auto d-xs-none white-background">
-                <img src="img/profile-pictures (1).svg" alt="A man beside a large phone with his social media's profile open" class="img-fluid">
+                <img src="img/profile-pictures (1).svg" alt="Um homem ao lado de um telefonre grande com a sua rede social aberta." class="img-fluid">
             </div>
             <div class="contact-text col-md-6 order-md-first">
                 <h2>Contate-me</h2>
                 <p class="paragraph-contact">Se você estiver interessado em me contratar para um projeto ou para trabalhar em sua empresa, sinta-se à vontade para usar os botões abaixo para se conectar comigo nas redes sociais. Clique uma vez no botão para ser redirecionado para a minha página nas redes sociais, duas vezes para copiar meu nome ou número de telefone.</p>        
                 <span class="contact-link-buttons m-auto">
-                    <button class="btn btn-social-media social-media-linkedin" title="Click once to visit profile, twice to copy name." id="linkedin">
+                    <button class="btn btn-social-media social-media-linkedin" title="Clique uma vez para abrir Linkedin, duas para copiar o nome" id="linkedin">
                         <img src="img/Layer 2.svg">
                         <span>LinkedIn</span>
                     </button>
-                    <button class="btn btn-social-media social-media-github" title="Click once to visit profile, twice to copy name." id="github">
+                    <button class="btn btn-social-media social-media-github" title="Clique uma vez para abrir Github, duas para copiar o nome" id="github">
                         <div class="white-board-github"></div>
                         <img src="img/github-142-svgrepo-com.svg" class="img-github">
                         <span >Github</span>
                     </button>
-                    <button class="btn btn-social-media social-media-whatsapp" title="Click once to send a message, twice to copy number." id="whatsapp">  
+                    <button class="btn btn-social-media social-media-whatsapp" title="Clique uma vez para abrir Whatsapp, duas para copiar o número" id="whatsapp">  
                         <img src="img/whatsapp-svgrepo-com.svg">
                         <span>Whatsapp</span>
                     </button>
